Bug 107103 - Pivot charts: legends disappear after dragging and dropping them a few times
Summary: Pivot charts: legends disappear after dragging and dropping them a few times
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks: Pivot-Chart
  Show dependency treegraph
 
Reported: 2017-04-11 21:59 UTC by Xisco Faulí
Modified: 2017-05-11 21:34 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screenshot (20.08 KB, image/png)
2017-04-11 21:59 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-04-11 21:59:29 UTC
Steps to reproduce:
1. Open attachment 132442 [details] from bug 107062
2. Double-click on the chart
3. Once the chart is selected, click on the legend and select it
4. Drag and drop the legend upon a the graph. ( Repeat this steps a few times )

Obseved behaviour: Legends disappear and only the button 'Data' is displayed

Reproduced in

Version: 5.4.0.0.alpha0+
Build ID: 7635e0c1c7f821a1081f8e3868f641ae74a172d6
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-04-11 21:59:59 UTC
Created attachment 132491 [details]
screenshot
Comment 2 bureautiquelibre 2017-04-13 14:31:23 UTC
Reproduced in:

Version: 5.4.0.0.alpha0+ (x64)
Build ID: eefe13c77d01be37c911e75af191717a944fedb3
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2017-04-10_23:47:07
Locale: fr-FR (fr_FR); Calc: group
Comment 3 Commit Notification 2017-05-11 20:59:24 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9e92527f500a20de838a93201718a761278d8f8d

tdf#107103 fixes for the legend in a pivot chart

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.