tdf#107103 fixes for the legend in a pivot chart

- Solves issue described in the bug where the legend calculation
  was not correct if using custom legend placing and the buttons
  were added to the legend (like in a pivot chart).
- Place the legend buttons horizontally if the legend is placed
  at the top or bottom (wide legend expansion), so the space is
  used more efficiently.
- Fix automatic placing of the legend when we have buttons at the
  bottom of the chart so that we don't cover them with the legend.
- It can happen that the button click is triggered when we resize
  the legend, so make sure we trigger only when mouse-down and
  mouse-up are on button.

Change-Id: I6a60e7885f7a2ddd6424b1cdfc22e8b046c89dd4